Add delete and edit flow.

--- a/admin.html
+++ b/admin.html
@@ -4,14 +4,37 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="bootstrap.min.css">
+    <style>
+        .table thead {
+            background: #ccc;
+        }
+        .table tbody input {
+            border: 0;
+            background: none;
+            padding: 0;
+            outline: none;
+        }
+        button.update {
+            display: none;
+        }
+    </style>
 </head>
 <body>
     <div class="table-responsive">
         <table class="table">
             <thead>
-
+                <tr>
+                    <td>Title</td>
+                    <td>Latitude</td>
+                    <td>Longitude</td>
+                    <td>Description</td>
+                    <td>Type</td>
+                    <td>Action</td>
+                </tr>
             </thead>
             <tbody>
+            </tbody>
+            <tfoot>
                 <tr>
                     <td>
                         <div class="form-group">
@@ -41,7 +64,7 @@
                         <div class="form-group">
                             <label class="sr-only" for="type">Type</label>
                             <select id="type" class="form-control">
-                                <option>Type</option>
+                                <option value="">Type</option>
                                 <option value="point">Point</option>
                                 <option value="info">Info</option>
                             </select>
@@ -51,7 +74,7 @@
                         <button type="submit" class="btn btn-default">Save</button>
                     </td>
                 </tr>
-            </tbody>
+            </tfoot>
         </table>
     </div>
 </body>
@@ -70,35 +93,97 @@
             inputTitle = document.querySelector('#title'),
             inputLat = document.querySelector('#lat'),
             inputLon = document.querySelector('#lon'),
-            inputDesc = document.querySelector('#desc');
+            inputDesc = document.querySelector('#desc'),
+            selectType = document.querySelector('#type');
 
-        var geoInfo = [];
-        var markerInfo = "<td>" +  + "</td>" +  + "</tr>";
-
+        function update() {
+            table.innerHTML = "";
+            for(var i = 0; i < state.items.length; i++) {
+                var el = document.createElement('tr');
+                var item = state.items[i];
+                el.id = item.id;
+                el.innerHTML = "<td><input type='text' class='title' readonly='true' value='" + item.title + "'></td><td><input type='text' class='lat' readonly='true' value='" +
+                    item.lat + "'</td><td><input type='text' class='lon' readonly='true' value='" + item.lon + "'</td><td><input type='text' class='description' readonly='true' value='" +
+                    item.description + "'</td><td>" + item.type + "</td><td><button class='edit'>Edit</button><button class='update'>Update</button><button class='delete'>Delete</button></td>";
+                table.appendChild(el);
+                inputTitle.value = "";
+                inputLat.value = "";
+                inputLon.value = "";
+                inputDesc.value = "";
+                selectType. value = "";
+            }
+        }
+        update();
 
         button.addEventListener('click', function() {
             var title = inputTitle.value;
             var lat = inputLat.value;
             var lon = inputLon.value;
             var description = inputDesc.value;
-            var el = document.createElement('tr');
-            el.innerHTML = "<td>" + title + "</td><td>" + lat + "</td><td>" + lon + "</td><td>" + description + "</td>";
-            table.insertBefore(el, table.children[0]);
-            inputTitle.value = "";
-            state.items.push(title);
+            var type = selectType.value;
+            var id = Math.random();
+            var item = {
+                title: title,
+                lat: lat,
+                lon: lon,
+                description: description,
+                type: type,
+                id: id
+            };
+            state.items.push(item);
+            update();
             localStorage.setItem('data', JSON.stringify(state));
-            addGeoInfoInTable();
-            saveGeoInfo();
-            //$('#campground_info').html(markerInfo)
         });
 
-        function addGeoInfoInTable() {
+        document.addEventListener('click', function(e) {
+            if(e.target.classList.contains('delete')) {
+                var el = e.target.closest('tr');
 
-        }
+                document.querySelector('.table tbody').removeChild(el);
+                for(var i=0; i < state.items.length; i++) {
+                    if(state.items[i].id == el.id) {
+                        state.items.splice(i, 1);
+                        localStorage.setItem('data',JSON.stringify(state));
+                    }
+                }
+            }
+        });
 
-        function saveGeoInfo() {
-            alert('SAVE');
-        }
+        document.addEventListener('click', function(e) {
+            if(e.target.classList.contains('edit')) {
+                e.target.style.display = 'none';
+                var el = e.target.closest('tr');
+                el.querySelector('.update').style.display = 'block';
+                var inputs = el.querySelectorAll('input');
+                for (var i = 0; i < inputs.length; i++) {
+                    inputs[i].readOnly = false;
+                }
+            }
+        });
+
+        document.addEventListener('click', function(e) {
+            if(e.target.classList.contains('update')) {
+                e.target.style.display = 'none';
+                var el = e.target.closest('tr');
+                var title = el.querySelector('.title').value;
+                var lat = el.querySelector('.lat').lat;
+                var lon = el.querySelector('.lon').lon;
+                var description = el.querySelector('.lon').description;
+                el.querySelector('.edit').style.display = 'block';
+                for(var i=0; i < state.items.length; i++) {
+                    if(state.items[i].id == el.id) {
+                        state.items[i] = {
+                            title: title,
+                            lat: lat,
+                            lon: lon,
+                            description: description,
+                            id: el.id
+                        };
+                    }
+                }
+                localStorage.setItem('data',JSON.stringify(state));
+            }
+        });
     });
 </script>
 </html>
